# youtube-tutorials

tutorials/6-types-of-rag/: .env.example  ARCHITECTURE.md  README.md  SLIDES.html  WALKTHROUGH.md  docker-compose.yml  pyproject.toml
tutorials/6-types-of-rag/data/: faq.md  refund-policy.md
tutorials/6-types-of-rag/sql/: schema.sql
tutorials/6-types-of-rag/src/: 01_document_loading.py  02_full_text_search.py  03_vector_search.py  04_hybrid_search.py  05_sql_rag.py  05a_sql_rag_parameterized.py  05b_sql_rag_dynamic.py  06_agentic_rag.py  seed.py
tutorials/intent-based-classification/: README.md  example.py  intent_classifier.py  pyproject.toml  router.py
tutorials/intent-based-classification/docs/: 01-the-problem.md  02-query-types.md  03-the-classifier.md  04-the-router.md  05-evaluation.md  06-summary.md
tutorials/nano-agent/: ARCHITECTURE.md  README.md  REQUIREMENTS.md  TASKS.md  TODO.md  config.yaml  nano-agent.example.yml  pyproject.toml
tutorials/nano-agent/.claude/: settings.local.json
tutorials/nano-agent/docs/: 01-how-agents-work.md  02-the-message-list.md  03-building-tools.md  04-the-agent-loop.md  05-events.md  06-approval-gate.md  07-sub-agents.md  08-thinking-and-ui.md  PLAN.md
tutorials/nano-agent/live-build/: 00-how-coding-agents-work.md  01-research.md  02-requirements.md  03-spec.md  04-tasks.md
tutorials/nano-agent/nano_agent/: __init__.py  __main__.py  agent.py  events.py  main.py  provider.py  tools.py  ui.py
tutorials/nano-agent/src/nano_agent/: agent.py  config.py  events.py  main.py  system_prompt.py
tutorials/nano-agent/src/nano_agent/listeners/: __init__.py  approval.py  logging.py  ui.py
tutorials/nano-agent/src/nano_agent/providers/: __init__.py  anthropic.py  (+1 more)
tutorials/nano-agent/tests/: test_agent.py  test_config.py  test_events.py  test_logging_listener.py  test_providers.py  test_tools.py
tutorials/postgresql-only-database-ai/: .env-sample  README.md  docker-compose.yml  pyproject.toml  start.sh
tutorials/postgresql-only-database-ai/docs/: 01-why-postgresql-for-ai.md  02-setup.md  03-vector-search.md  04-full-text-search.md  05-hybrid-search.md  06-rag-chatbot.md  07-when-to-use-dedicated-vector-db.md
tutorials/postgresql-only-database-ai/sql/: 01_setup.sql  02_vector_search.sql  03_full_text_search.sql  04_hybrid_search.sql  05_seed_data.sql
tutorials/postgresql-only-database-ai/src/: main.py  seed.py
tutorials/postgresql-only-database-ai/src/static/: index.html
(+186 files in other folders)
