[project]
name = "intent-based-classification"
version = "0.1.0"
description = "Intent-based query routing for RAG systems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.16.0",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
]
