[project]
name = "nano-agent"
version = "0.1.0"
description = "A minimal coding agent built from scratch with the Anthropic API"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.52.0",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest",
    "ipykernel",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nano_agent"]

[project.scripts]
nano-agent = "nano_agent.main:main"
